--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Assignment_1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO84A/TQn1wXWe09wGwVqFA",
+      "authorship_tag": "ABX9TyPPNBFnZPSy12+D76Yxthey",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,6 +54,17 @@
         "            new_list.next = list2\n",
         "        return test.next"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Trying"
+      ],
+      "metadata": {
+        "id": "YdW9bBvpbcHE"
+      },
+      "execution_count": 1,
+      "outputs": []
     }
   ]
 }
