--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Assignment_1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPPNBFnZPSy12+D76Yxthey",
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,12 +58,32 @@
     {
       "cell_type": "code",
       "source": [
-        "# Trying"
+        "#Number of 1 bits\n",
+        "#  question 2\n",
+        "class Solution:\n",
+        "    def hammingWeight(self, n: int) -> int:\n",
+        "        c = 0\n",
+        "        while n: \n",
+        "            if (n&1):\n",
+        "                c += 1\n",
+        "            n=n>>1\n",
+        "        return c"
       ],
       "metadata": {
         "id": "YdW9bBvpbcHE"
       },
       "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "4uOqQhqF8dvK"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
