--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -72,19 +72,34 @@
       "metadata": {
         "id": "YdW9bBvpbcHE"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#Final Value After Operations\n",
+        "# question 3\n",
+        "\n",
+        "class Solution:\n",
+        "    def finalValueAfterOperations(self, operations: List[str]) -> int:\n",
+        "        \n",
+        "        return sum ([1 if '+' in x else -1 for x in operations])"
       ],
       "metadata": {
         "id": "4uOqQhqF8dvK"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "sDlN6F53iD1C"
+      }
     }
   ]
 }
