--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -93,6 +93,28 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#Subtract the Product and Sum of Digits of an Integer\n",
+        "\n",
+        "\n",
+        "class Solution:\n",
+        "    def subtractProductAndSum(self, n: int) -> int:\n",
+        "        \n",
+        "        product = 1 \n",
+        "        total = 0\n",
+        "        for i in str(n): \n",
+        "            product *= int(i)\n",
+        "            total += int(i)\n",
+        "        return product - total"
+      ],
+      "metadata": {
+        "id": "QxAI29IBe3Hy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         ""
